# NPA

./: .gitignore  CG.cpp  CG.h  CGC.h  CMakeLists.txt  input.cpp  input.h  main.cpp  npa.cpp  npa.h  sd.sps  test.cpp
